# fabro

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  fabro.toml  run.json  spec-dod-multimodel.dot  spec-dod.dot
.ai/prompts/: code-review-deep-2.md
.config/: nextest.toml
.fabro/: project.toml
.github/workflows/: deploy-azure.yml  release.yml  rust.yml
apps/arc-web/: package.json
apps/fabro-web/: package.json
attractor-web/src/: StartForm.tsx  api.ts  index.css
crates/agent/: Cargo.toml  README.md
crates/arc-agent/: Cargo.toml  README.md
crates/arc-api/: Cargo.toml
crates/arc-attractor/: Cargo.toml
crates/arc-cli/: Cargo.toml
crates/arc-devcontainer/: DEVCONTAINER-COMPATIBILITY.md  INTEGRATION.md
crates/arc-git-storage/: Cargo.toml
crates/arc-llm/: Cargo.toml
crates/arc-sprites/: Cargo.toml
crates/arc-types/: Cargo.toml  build.rs
crates/arc-util/: Cargo.toml
crates/arc-workflows/: Cargo.toml  README.md
crates/attractor/: Cargo.toml
crates/coding-agent-loop/: Cargo.toml
crates/llm/: Cargo.toml
crates/redact/: Cargo.toml
crates/redact/src/: entropy.rs  gitleaks.rs  jsonl.rs
crates/terminal/: Cargo.toml
crates/unified-llm-cli/: Cargo.toml
docker/: Dockerfile  azure-sandbox-base.Dockerfile  entrypoint.sh  preflight.sh
docs/: changelog.mdx  docs.json  spec-structure.md
docs-internal/: events.md  plan-events-as-source-of-truth-follow-ups.md  run-directory-keys.md
docs-internal/plans/: vendor-graphviz-sys.md
docs/administration/: advanced-setup.mdx  azure-hosting.md  bring-your-own-key.mdx  costs.mdx  deploy-azure.mdx  deploy-digital-ocean.mdx  deploy-fly-io.mdx  deploy-railway.mdx  deploy-render.mdx  deploy-server.mdx  monitoring.mdx  sandboxing.mdx  security.mdx  server-configuration.mdx  troubleshooting.mdx  usage.mdx
docs/agents/: hooks.mdx  mcp.mdx  outputs.mdx  permissions.mdx  prompts.mdx  skills.mdx  subagents.mdx  tools.mdx
docs/api-reference/: arc-api.yaml  client-sdks.mdx  demo-mode.mdx  fabro-api.yaml  overview.mdx
docs/changelog/: 2026-02-23.mdx  2026-02-24.mdx  2026-02-25.mdx  2026-02-26.mdx  2026-02-28.mdx  2026-03-01.mdx  2026-03-02.mdx  2026-03-03.mdx  (+9 more)
files-internal/: testing-strategy.md
installer/: fabro.rb.template
lib/crates/fabro-sandbox/: Cargo.toml
lib/crates/fabro-sandbox/src/: config.rs  details.rs  docker.rs  error.rs  lib.rs  local.rs  reconnect.rs  redact.rs  repo.rs  sandbox.rs  sandbox_provider.rs  sandbox_spec.rs  terminal.rs  test_support.rs  worktree.rs
lib/crates/fabro-sandbox/src/azure/: arm.rs  config.rs  mod.rs  protocol.rs  resource_id.rs  sandboxd_client.rs
lib/crates/fabro-sandbox/src/daytona/: mod.rs
lib/crates/fabro-sandbox/src/exe/: mod.rs  openssh_runner.rs
lib/crates/fabro-sandbox/src/ssh/: mod.rs
lib/crates/fabro-sandbox/tests/: azure_provider.rs  daytona_streaming_live.rs
lib/crates/fabro-sandboxd/: Cargo.toml
lib/crates/fabro-sandboxd/src/: lib.rs  main.rs
lib/crates/fabro-sandboxd/tests/: http.rs
openapi/: arc-api.yaml
prompts/: cleanup-commit-history.md  rebase-onto-origin-main.md
tmp/: implement-and-simplify.dot
(+1430 files in other folders)
