[package]
name = "redact"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Secret detection and redaction for log output"

[lib]
doctest = false

[dependencies]
regex.workspace = true
aho-corasick.workspace = true
serde_json.workspace = true

[build-dependencies]
toml = "0.8"
serde = { workspace = true }

[dev-dependencies]
