[package]
name = "fabro-sandboxd"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
fabro-sandbox = { path = "../fabro-sandbox", features = ["azure"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
